@@ -18,8 +18,11 @@ apport (0.44) UNRELEASED; urgency=low
     interactive python sessions where sys.argv[0] is empty and thus
     ExecutablePath ends up being the current directory. Add test cases.
     Closes: LP#81237
+  * apport/report.py: Add method add_hooks_info() which executes a function
+    add_info(report) from /usr/share/apport/<package>.py. Also add
+    appropriate test cases. This provides per-package hooks for apport.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 24 Jan 2007 12:07:06 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 24 Jan 2007 15:20:57 +0100
 
 apport (0.43) feisty; urgency=low
 
